--- a/eventi.html
+++ b/eventi.html
@@ -7,10 +7,10 @@
 
     <link
       rel="shortcut icon"
-      href="/img/eventi/e1.JPGfavicon.png"
+      href="/img/eventi/1.JPGfavicon.png"
       type="image/png"
     />
-    <link rel="icon" href="/img/eventi/e1.JPGfavicon.png" type="image/png" />
+    <link rel="icon" href="/img/eventi/1.JPGfavicon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -83,279 +83,244 @@
       <div class="grid-images">
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e1.JPG" alt="" />
+            <img src="/img/eventi/1.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e2.JPG" alt="" />
+            <img src="/img/eventi/2.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e3.JPG" alt="" />
+            <img src="/img/eventi/3.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e4.JPG" alt="" />
+            <img src="/img/eventi/4.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e5.JPG" alt="" />
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e7.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e8.JPG" alt="" />
+            <img src="/img/eventi/5.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e10.JPG" alt="" />
+            <img src="/img/eventi/7.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e11.JPG" alt="" />
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e13.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e14.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e15.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e16.JPG" alt="" />
+            <img src="/img/eventi/8.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e17.JPG" alt="" />
+            <img src="/img/eventi/10.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e18.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e19.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e20.JPG" alt="" />
+            <img src="/img/eventi/11.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e21.JPG" alt="" />
+            <img src="/img/eventi/13.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e22.JPG" alt="" />
+            <img src="/img/eventi/14.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e23.JPG" alt="" />
+            <img src="/img/eventi/15.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e24.JPG" alt="" />
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e25.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e26.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e27.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e28.JPG" alt="" />
+            <img src="/img/eventi/16.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e29.JPG" alt="" />
+            <img src="/img/eventi/17.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e30.JPG" alt="" />
+            <img src="/img/eventi/18.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e31.JPG" alt="" />
+            <img src="/img/eventi/19.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e32.JPG" alt="" />
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e33.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e34.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e37.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e38.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e39.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e40.JPG" alt="" />
+            <img src="/img/eventi/20.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e41.JPG" alt="" />
+            <img src="/img/eventi/21.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e42.JPG" alt="" />
+            <img src="/img/eventi/22.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e43.JPG" alt="" />
+            <img src="/img/eventi/23.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e44.JPG" alt="" />
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e45.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e46.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e47.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e56.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e48.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e49.JPG" alt="" />
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-image">
-            <img src="/img/eventi/e50.JPG" alt="" />
+            <img src="/img/eventi/24.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e52.JPG" alt="" />
+            <img src="/img/eventi/25.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e53.JPG" alt="" />
+            <img src="/img/eventi/26.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e54.JPG" alt="" />
+            <img src="/img/eventi/27.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e55.JPG" alt="" />
+            <img src="/img/eventi/28.JPG" alt="" />
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e57.JPG" alt="" />
+            <img src="/img/eventi/29.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e58.JPG" alt="" />
+            <img src="/img/eventi/30.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/32.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/33.JPG" alt="" />
           </div>
         </div>
         <div class="card">
           <div class="card-image">
-            <img src="/img/eventi/e59.JPG" alt="" />
+            <img src="/img/eventi/34.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/37.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/38.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/39.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/40.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/41.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/42.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/43.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/44.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/45.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/46.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/47.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/48.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/49.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/50.JPG" alt="" />
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/52.JPG" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/img/eventi/53.JPG" alt="" />
           </div>
         </div>
       </div>
