--- a/eventi.html
+++ b/eventi.html
@@ -60,7 +60,7 @@
     <main>
       <div class="intro-section">
         <div class="intro">
-          <h1 class="title">Eventi e Catering, Feste e Coffe Break</h1>
+          <h1 class="title">Eventi e Catering, Feste e Coffee Break</h1>
           <h2 class="subtitle">
             Per informazioni e preventivi: <br />
             <a href="mailto:dolceriafatur@gmail.com">
